<?xml version="1.0"?>
<package>
  <name>asr_mild_base_laserscanner</name>
  <version>1.0.0</version>
  <description>This package provides streams of laser scan messages in cartesian coordinates from a planar sick laser scanner.</description>  
  <author>Aumann Florian, Borella Jocelyn, Dehmani Souheil, Marek Felix, Reckling Reno</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/asr_mild_base_laserscanner</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
